# starting-ragchatbot-codebase

./: .env.example  .gitignore  CLAUDE.md  frontend-changes.md  pyproject.toml  test_fixes.py
backend/: ai_generator.py  app.py  config.py  rag_system.py  search_tools.py  vector_store.py
backend/test_chroma_db/: chroma.sqlite3
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_rag_system.py  test_real_app_integration.py  test_tool_manager.py  test_vector_store.py
frontend/: index.html  script.js  style.css
scripts/: format-code.py  quality-check.py
